--- a/micro-videos/package.json
+++ b/micro-videos/package.json
@@ -6,14 +6,24 @@
   "scripts": {
     "ts-node": "ts-node",
     "tsc": "tsc",
-    "clean:tsc": "rm tsconfig.tsbuildinfo"
+    "clean:tsc": "rm tsconfig.tsbuildinfo",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": { 
-    "ts-node": "^10.7.0",
+  "devDependencies": {
+    "@swc/core": "^1.2.163",
+    "@swc/jest": "^0.2.20",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.181",
     "@types/node": "^16",
+    "@types/uuid": "^8.3.4",
+    "jest": "^27.5.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
